# magic-opener

./: .gitignore  Cargo.toml  Justfile  README.md  default.nix  dist-workspace.toml  flake.nix  main.rs
.github/workflows/: publish.yml  release.yml
src/: main.rs  parser.rs  repo.rs
