[package]
authors = [ "Dan Sully" ]
categories = [ "command-line-utilities" ]
description = "An 'open' replacement that tries to do the right thing."
edition = "2024"
homepage = "https://github.com/dsully/magic-opener"
keywords = [ "git" ]
license = "MIT"
name = "magic-opener"
readme = "README.md"
repository = "https://github.com/dsully/magic-opener"
version = "0.1.2"

[[bin]]
name = "open"
path = "main.rs"

[dependencies]
clap = { version = "^4.5", default-features = false, features = [
  "help",
  "std",
  "usage",
] }
ghrepo = "0.7"

[profile.release]
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
