[package]
name = "magic-opener"
version = "0.3.0"
authors = ["Dan Sully"]
edition = "2024"
description = "An 'open' replacement that tries to do the right thing."
readme = "README.md"
homepage = "https://github.com/dsully/magic-opener"
repository = "https://github.com/dsully/magic-opener"
license = "MIT"
keywords = ["git"]
categories = ["command-line-utilities"]

[[bin]]
name = "open"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5", default-features = false, features = [
  "help",
  "std",
  "usage",
] }
thiserror = "2"

[dev-dependencies]
testresult = "0"

[profile.release]
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
